load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["report.go"],
    importpath = "github.com/playnet-public/disport/pkg/disport",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/bwmarrin/discordgo:go_default_library",
        "//vendor/github.com/seibert-media/golibs/log:go_default_library",
        "//vendor/go.opencensus.io/stats:go_default_library",
        "//vendor/go.opencensus.io/tag:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
