load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["init.go"],
    importpath = "github.com/playnet-public/disport/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/github.com/playnet-public/promcord/pkg/version:go_default_library",
        "//vendor/github.com/seibert-media/golibs/log:go_default_library",
    ],
)
